<resources>
    <string name="app_name">RailMonitoring</string>

    <string name="input">录入</string>
    <string name="export">导出</string>
    <string name="my">我的</string>

    <string name="userInfo">个人信息</string>
    <string name="about">关于</string>
    <string name="close">关闭</string>

    <string name="sureExit">确认关闭应用吗？</string>


    <string name="save">保存</string>
    <string name="date">日期：</string>
    <string name="direction">行别：</string>
    <string name="num_of_km">千米数：</string>
    <string name="trackNum">轨道号：</string>
    <string name="abnormityDescription">描述：</string>
    <string name="other">其它：</string>

    <string name="up">上行</string>
    <string name="down">下行</string>

    <string name="exportExcel">导出 Excel</string>
    <string name="excelLoading">正在导入数据&#8230;</string>



    <string-array name="titleArray">
        <item>日期</item>
        <item>行别</item>
        <item>千米数</item>
        <item>轨道号</item>
        <item>描述</item>
        <item>其它</item>
    </string-array>
</resources>
