<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.Guideline
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <View
        android:id="@+id/headBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/kernel"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        style="@style/inputFragmentHead"
        android:text="@string/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/num_of_km"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/inputFragmentHeadContent"
        android:layout_width="wrap_content"
        android:text=""
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintLeft_toRightOf="@id/date" />


    <TextView
        android:id="@+id/direction"
        style="@style/inputFragmentHead"
        android:text="@string/direction"
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintRight_toLeftOf="@+id/tvDirection" />

    <TextView
        android:id="@+id/tvDirection"
        style="@style/inputFragmentHeadContent"
        android:text="@string/up"
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/num_of_km"
        style="@style/inputFragmentHead"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/num_of_km"
        app:layout_constraintBottom_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/editNumKm"
        style="@style/inputFragmentHeadContent"
        android:text="453km"
        app:layout_constraintLeft_toRightOf="@id/num_of_km"
        app:layout_constraintTop_toTopOf="@id/num_of_km" />


    <TextView
        android:id="@+id/trackNum"
        style="@style/inputFragmentHead"
        android:text="@string/trackNum"
        app:layout_constraintRight_toLeftOf="@+id/editTrackNum"
        app:layout_constraintTop_toTopOf="@id/num_of_km" />

    <TextView
        android:id="@+id/editTrackNum"
        style="@style/inputFragmentHeadContent"
        android:text="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/trackNum" />


    <TextView
        android:id="@+id/abnormityDesc"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center_horizontal"
        android:text="@string/abnormityDescription"
        app:layout_constraintTop_toBottomOf="@id/num_of_km" />

    <EditText
        android:id="@+id/editAbnormityDesc"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_110"
        android:gravity="start"
        android:textColor="@color/txtSecondColor"
        android:textSize="@dimen/txt_small"
        android:background="@drawable/main_input_shape_edit"
        android:layout_marginRight="@dimen/spacing_medium_small"
        app:layout_constraintLeft_toRightOf="@id/abnormityDesc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/abnormityDesc" />


    <TextView
        android:id="@+id/other"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center_horizontal"
        android:text="@string/other"
        app:layout_constraintTop_toBottomOf="@id/editAbnormityDesc" />

    <EditText
        android:id="@+id/editOther"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_80"
        android:gravity="start"
        android:textColor="@color/txtSecondColor"
        android:textSize="@dimen/txt_small"
        android:layout_marginRight="@dimen/spacing_medium_small"
        android:background="@drawable/main_input_shape_edit"
        app:layout_constraintLeft_toRightOf="@id/other"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/other" />


    <Button
        android:id="@+id/btnSave"
        style="@style/unifyBottomBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOther" />

</android.support.constraint.ConstraintLayout>