<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.Guideline
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <View
        android:id="@+id/headBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/kernel"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagStartDate"
        style="@style/inputFragmentHead"
        android:layout_width="wrap_content"
        android:drawablePadding="@dimen/spacing_small"
        android:drawableLeft="@drawable/main_export_date_svg"
        android:paddingLeft="@dimen/spacing_medium_small"
        android:paddingRight="@dimen/spacing_medium_small"
        android:text="选择开始日期"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tagEndDate"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvStartDate" />

    <TextView
        android:id="@+id/tvStartDate"
        style="@style/inputFragmentHead"
        android:layout_width="wrap_content"
        android:background="@drawable/ripple_rect"
        android:drawablePadding="@dimen/spacing_small"
        android:drawableRight="@drawable/app_right_arrow_svg"
        android:paddingLeft="@dimen/spacing_medium_small"
        android:paddingRight="@dimen/spacing_medium_small"
        android:text="2018-06-23"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tagEndDate"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/tagStartDate"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tagEndDate"
        style="@style/inputFragmentHead"
        android:layout_width="wrap_content"
        android:drawablePadding="@dimen/spacing_small"
        android:drawableLeft="@drawable/main_export_date_svg"
        android:paddingLeft="@dimen/spacing_medium_small"
        android:paddingRight="@dimen/spacing_medium_small"
        android:text="选择结束日期"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvEndDate"
        app:layout_constraintBottom_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/tvEndDate"
        style="@style/inputFragmentHead"
        android:layout_width="wrap_content"
        android:background="@drawable/ripple_rect"
        android:drawablePadding="@dimen/spacing_small"
        android:drawableRight="@drawable/app_right_arrow_svg"
        android:paddingLeft="@dimen/spacing_medium_small"
        android:paddingRight="@dimen/spacing_medium_small"
        android:text="2018-06-23"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/tagEndDate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/line" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#acd4f7"
        app:layout_constraintTop_toTopOf="@+id/direction"
        app:layout_constraintBottom_toBottomOf="@+id/direction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/direction"
        style="@style/inputFragmentHead"
        android:layout_width="wrap_content"
        android:drawablePadding="@dimen/spacing_small"
        android:drawableLeft="@drawable/main_export_svg_up_down"
        android:paddingLeft="@dimen/spacing_medium_small"
        android:paddingRight="@dimen/spacing_medium_small"
        android:text="@string/direction"
        app:layout_constraintTop_toBottomOf="@id/line"/>

    <TextView
        android:id="@+id/tvDirection"
        style="@style/inputFragmentHeadContent"
        android:layout_width="wrap_content"
        android:text="@string/up"
        android:drawablePadding="@dimen/spacing_small"
        android:drawableRight="@drawable/app_right_arrow_svg"
        android:paddingLeft="@dimen/spacing_medium_small"
        android:paddingRight="@dimen/spacing_medium_small"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/direction"/>

    <Button
        android:id="@+id/btnExport"
        style="@style/unifyBottomBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_30"
        android:text="@string/exportExcel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>